--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<img id="banner" src="img/banner_.jpg">
+<img id="banner" src="banner_.jpg">
 
 <div style="background: #1C1C1C;">
 <h1>Moon Knight</h1>
@@ -43,7 +43,7 @@
 </ul>
 </div>
 
-<center><img id="lua" src="img/lua.jpg"></center>
+<center><img id="lua" src="lua.jpg"></center>
 
 </body>
 </html>
